2005-03-05 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: 1.0.6.99.
	* src/mod_mono.c: patch from Rob Lyon that fixes unix socket deletion
	when the default name is used.

2005-02-24 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: some small changes that make this work on amd64.
	Thanks to Mike Morano.

2005-02-24 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: make the new 'several mod-mono-server' schema work
	when directives are inside <virtualhost>.

2005-02-16 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: prevent execution of 'init' twice (parent and child)
	under apache 1.3.
	* src/mod_mono.h: added extern declaration for 2 apache 1.3 variables.

2005-02-15 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.h: removed <apr_env.h>.

2005-02-11 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: SERVER_PORT_SECURE returns true if we're https. Part
	of the fix for bug #71680.

2005-02-10 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* INSTALL:
	* man/mod_mono.8.in: updated.

2005-02-10 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: no ranlib.

	* src/mod_mono.c: fixed a few minor problems found under apache 1.3.
	Don't pass the default mono config. directory to servers others than
	the default one. Fixed the default socket file name for non-default
	servers.

	* src/mod_mono.h: MonoSetServerAlias takes 1 argument even on
	apache 1.3.

	* README: updated...

2005-02-09 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: fixed autoscan warning and use 'if test'.
	* src/mod_mono.[ch]: added support for starting more than one
	mod-mono-server. All the existing directives can take now 2 parameters,
	the first being an alias for a mod-mono-server instance. Added
	MonoSetServerAlias to be used inside Location/Directory to choose which
	mod-mono-server instance will be used. The alias 'default' is assumed
	if the alias argument is omitted.
